static/css/images.css
.img-gallery {
    width: 100%;
    display: flex;
    flex-flow: row wrap;
    justify-content: space-around;
    overflow: auto;
    text-align:  center;
    margin-bottom: 1.25rem;
    border-radius: 0.75rem;
}

.img-gallery figure {
    background: rgba(254, 244, 238, 0.99);
    margin-right: 0.25rem;
    margin-left: 0.25rem;
    margin-bottom: 1.25rem;
}

.img-gallery figure img{
    padding: 0.75rem 0.75rem 0rem;
    max-height: 65rem;
    max-width: 50rem;
    width: auto;
    height: auto;
    object-fit: contain;
}

.img-gallery figcaption {
    text-align: center;
    color: #1f3c48;
    background: rgba(254, 244, 238, 0.99);
    font-size: 0.975rem;
    font-weight: 350;
    font-style: oblique;
    padding-bottom: 0.5rem;
}

.text_image {
    max-height: 65rem;
    max-width: 50rem;
    margin: 3.65rem auto;
    text-align: center;
    width: auto;
    height: auto;
    object-fit: contain;
}

.text_image a {
    object-fit: contain;
    cursor: zoom-in;
}

.text_image a img {
    max-height: 65rem;
    max-width: 50rem;
}

@media (max-width: 800px) {
    .text_image {
        max-width: 360px;
        max-height: 480px;
    }

    .text_image a img {
        max-width: 360px;
        max-height: 480px;
    }
}

